--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using BookFaceApp
+@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
 @using BookFaceApp.Models
+@using BookFaceApp.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
