--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using BookFaceApp.Models
+@using BookFaceApp.Models.User
 @using BookFaceApp.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
