--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using BookFaceApp.Models
+@using BookFaceApp.Models.Publication
 @using BookFaceApp.Models.User
 @using BookFaceApp.Data.Entities
+@using BookFaceApp.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
