--- a/BookFaceApp/Views/Profile/Index.cshtml
+++ b/BookFaceApp/Views/Profile/Index.cshtml
@@ -12,11 +12,13 @@
 	@foreach (var publication in Model)
 	{
 		<div class="card col-4" style="width: 20rem; ">
+			<h5 class="card-title mt-1">@publication.UserName</h5>
 			<img class="card-img-top" style="width: 18rem;"
 			 src="@publication.ImageUrl" alt="Publication Image">
 			<div class="card-body">
-
 				<h5 class="card-title mt-1">@publication.Title</h5>
+				<h5 class="card-title mt-1">@publication.UsersPublications.Count likes</h5>
+				<h5 class="card-title mt-1">@publication.PublicationsComments.Count comments</h5>
 			</div>
 
 			<a class="btn btn-info" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">Details</a>
