--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using System.Security.Claims
 @using BookFaceApp.Models
 @using BookFaceApp.Models.Publication
+@using BookFaceApp.Models.Comment
 @using BookFaceApp.Models.User
 @using BookFaceApp.Data.Entities
 @using BookFaceApp.Services
