--- a/BookFaceApp/Views/Comment/Add.cshtml
+++ b/BookFaceApp/Views/Comment/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model PublicationAddCommentModel
+﻿@model CommentAddModel
 
 @{
     ViewBag.Title = "Make a new comment";
@@ -10,13 +10,14 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-action="AddComment" method="post">
+        <form asp-action="Add" method="post">            
+			@Html.HiddenFor(m => m.PublicationId)
             <div class="mb-3"> 
-                <label asp-for="@Model.Text" class="form-label">Title</label>
+                <label asp-for="@Model.Text" class="form-label">Text</label>
                 <input asp-for="@Model.Text" class="form-control" aria-required="true" />
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
-            <form class="input-group-sm" asp-controller="Publication" asp-action="AddComment" asp-route-publicationId="@Model.PublicationId">
+            <form class="input-group-sm" asp-controller="Comment" asp-action="Add" asp-route-id="@Model.PublicationId">
                 <input type="submit" value="Post Comment" class="fs-6 btn btn-success mb-3 p-2" />
             </form>
         </form>
