--- a/BookFaceApp/Views/Profile/Index.cshtml
+++ b/BookFaceApp/Views/Profile/Index.cshtml
@@ -1,19 +1,22 @@
 ﻿@model IEnumerable<PublicationViewModel>
 
 @{
-	ViewBag.Title = "My Profile";
+	ViewBag.Title = "My Publications";
 }
 
 <h2 class="text-center">@User.Identity?.Name</h2>
-<h2 class="text-center">My Publications</h2>
+<h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div class="text-center row">
+<div id="main-card" class="text-center row main-card">
 	@foreach (var publication in Model)
 	{
-		<div class="card col-4" style="width: 20rem; ">
+		<div class="card col-4" style="width: 375px; margin: 5px;">
+			@*<a asp-controller="Profile" asp-action="Index" asp-route-id="@publication.UserId">
+		<h5 class="card-title mt-1">@publication.UserName</h5>
+		</a>*@
 			<h5 class="card-title mt-1">@publication.UserName</h5>
-			<img class="card-img-top" style="width: 18rem;"
+			<img class="card-img-top" style="width: 350px; height: 250px;"
 			 src="@publication.ImageUrl" alt="Publication Image">
 			<div class="card-body">
 				<h5 class="card-title mt-1">@publication.Title</h5>
@@ -21,7 +24,30 @@
 				<h5 class="card-title mt-1">@publication.PublicationsComments.Count comments</h5>
 			</div>
 
-			<a class="btn btn-info" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">Details</a>
+			<div>
+				<div id="pub-like-btn">
+					@if (publication.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
+					{
+						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
+							<button type="submit" class="btn btn-light">
+								<img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
+							</button>
+						</form>
+					}
+					else
+					{
+						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
+							<button type="submit" class="btn btn-outline-light">
+								<img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
+							</button>
+						</form>
+					}
+				</div>
+
+				<div id="pub-det-btn">
+					<a class="btn btn-light" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">COMMENTS</a>
+				</div>
+			</div>
 		</div>
 	}
 </div>
