--- a/BookFaceApp/Views/Publication/Details.cshtml
+++ b/BookFaceApp/Views/Publication/Details.cshtml
@@ -11,14 +11,14 @@
 <div class="text-center row">
 	<div class="card col-4" style="width: 20rem; ">
 		<div>
-			<h5 id="pub-det-username" class="card-title mt-1">@Model.UserName</h5>
+			<h5 class="card-title mt-1">@Model.UserName</h5>
 
 			@if (@Model.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
 			{
-				<a id="pub-det-btn" class="btn btn-outline-info" asp-area="" asp-controller="Publication" asp-action="Edit" asp-route-id="@Model.Id">
+				<a class="btn btn-outline-info" asp-area="" asp-controller="Publication" asp-action="Edit" asp-route-id="@Model.Id">
 					<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
 				</a>
-				<a id="pub-det-btn" class="btn btn-outline-danger" asp-area="" asp-controller="Publication" asp-action="Delete" asp-route-id="@Model.Id">
+				<a class="btn btn-outline-danger" asp-area="" asp-controller="Publication" asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this publication?')">
 					<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
 				</a>
 			}
@@ -27,10 +27,9 @@
 		<img class="card-img-top" style="width: 18rem;"
 			 src="@Model.ImageUrl" alt="Publication Image">
 		<div class="card-body">
-
 			<h5 class="card-title mt-1">@Model.Title</h5>
+			<hr />
 		</div>
-
 
 		@if (Model.PublicationsComments.Count > 0)
 		{
@@ -39,6 +38,15 @@
 				<div class="card-body">
 					<h5 class="card-title mt-1">@comment.Comment.User.UserName</h5>
 					<h5 class="card-title mt-1">@comment.Comment.Text</h5>
+					@if (@comment.Comment.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
+					{
+						<a class="btn btn-outline-info" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@comment.CommentId">
+							<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
+						</a>
+						<a class="btn btn-outline-danger" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this publication?')">
+							<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
+						</a>
+					}
 					<hr />
 				</div>
 			}
@@ -48,8 +56,7 @@
 			<h5 class="card-title mt-1">No comments yet.</h5>
 		}
 
-
-		<a class="btn btn-success" asp-area="" asp-controller="Publication" asp-action="AddComment" asp-route-id="@Model.Id">Add new comment</a>
+		<a class="btn btn-success" asp-area="" asp-controller="Comment" asp-action="Add" asp-route-id="@Model.Id">Add new comment</a>
 	</div>
 </div>
 
