Added Core and Infrastructure projects

--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -5,6 +5,6 @@
 @using BookFaceApp.Models.Publication
 @using BookFaceApp.Models.Comment
 @using BookFaceApp.Models.User
-@using BookFaceApp.Data.Entities
+@using BookFaceApp.Infrastructure.Data.Entities
 @using BookFaceApp.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
