Added Categories table and Seeded data Added migrations

--- a/BookFaceApp/Views/Shared/_Layout.cshtml
+++ b/BookFaceApp/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; @DateTime.Now.Year - SoftUni Final Project - Take Two
+			&copy; @DateTime.UtcNow.Year - BookFaceApp
 		</div>
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
