--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -1,10 +1,10 @@
 ﻿@using BookFaceApp
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@using BookFaceApp.Models
-@using BookFaceApp.Models.Publication
-@using BookFaceApp.Models.Comment
-@using BookFaceApp.Models.User
+@using BookFaceApp.Core.Models
+@using BookFaceApp.Core.Models.Publication
+@using BookFaceApp.Core.Models.Comment
+@using BookFaceApp.Core.Models.User
 @using BookFaceApp.Infrastructure.Data.Entities
-@using BookFaceApp.Services
+@using BookFaceApp.Core.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
