Added toastr Added small error handling with toastr

--- a/BookFaceApp/Views/Shared/_Layout.cshtml
+++ b/BookFaceApp/Views/Shared/_Layout.cshtml
@@ -7,10 +7,13 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/BookFaceApp.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/lib/toastr/toastr.min.css" />
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 
 	@await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
+	<partial name="_UserMessages" />
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
@@ -53,9 +56,9 @@
 			&copy; @DateTime.UtcNow.Year - BookFaceApp
 		</div>
 	</footer>
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/lib/toastr/toastr.min.js"></script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
