--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using BookFaceApp.Core.Models.User
 @using BookFaceApp.Infrastructure.Data.Entities
 @using BookFaceApp.Core.Services
+@using BookFaceApp.Core.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
