--- a/BookFaceApp/Views/Publication/Details.cshtml
+++ b/BookFaceApp/Views/Publication/Details.cshtml
@@ -43,7 +43,7 @@
 						<a class="btn btn-outline-info" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@comment.CommentId">
 							<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
 						</a>
-						<a class="btn btn-outline-danger" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@comment.CommentId" onclick="return confirm('Are you sure you want to delete this publication?')">
+						<a class="btn btn-outline-danger" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@comment.CommentId" onclick="return confirm('Are you sure you want to delete this comment?')">
 							<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
 						</a>
 					}
