--- a/BookFaceApp/Views/Publication/Details.cshtml
+++ b/BookFaceApp/Views/Publication/Details.cshtml
@@ -28,6 +28,7 @@
 			 src="@Model.ImageUrl" alt="Publication Image">
 		<div class="card-body">
 			<h5 class="card-title mt-1">@Model.Title</h5>
+			<h5 class="card-title mt-1">Category: @Model.Category</h5>
 			<hr />
 		</div>
 
