--- a/BookFaceApp/Views/Shared/_Layout.cshtml
+++ b/BookFaceApp/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
 								<a class="nav-link text-dark" asp-area="" asp-controller="Friend" asp-action="Mine">Friends</a>
 							</li>
 							<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="All">All Users</a>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Test">Template</a>
 							</li>
 						}
