Added specific user page Changed home page to top 3 publications ( most likes )

--- a/BookFaceApp/Views/Profile/UserProfile.cshtml
+++ b/BookFaceApp/Views/Profile/UserProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PublicationViewModel>
 
 @{
-	ViewBag.Title = "All Publications";
+	ViewBag.Title = "Selected User Publications";
 }
 
 
