--- a/BookFaceApp/Views/Shared/_Layout.cshtml
+++ b/BookFaceApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Publication" asp-action="All">All</a>
+						</li>
 						@if (User?.Identity?.IsAuthenticated ?? false)
 						{
 							<li class="nav-item">
