--- a/BookFaceApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
 	@if (SignInManager.IsSignedIn(User))
 	{
 		<li class="nav-item">
-			<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Index">My Profile</a>
+			<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">My Profile</a>
 		</li>
 		<li class="nav-item">
 			<form class="form-inline" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
