--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -1,11 +1,12 @@
 ﻿@using BookFaceApp
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@using BookFaceApp.Core.Models
-@using BookFaceApp.Core.Models.Publication
-@using BookFaceApp.Core.Models.Comment
-@using BookFaceApp.Core.Models.User
-@using BookFaceApp.Infrastructure.Data.Entities
-@using BookFaceApp.Core.Services
 @using BookFaceApp.Core.Constants
+@using BookFaceApp.Core.Services
+@using BookFaceApp.Core.Models
+@using BookFaceApp.Core.Models.User
+@using BookFaceApp.Core.Models.Profile
+@using BookFaceApp.Core.Models.Comment
+@using BookFaceApp.Core.Models.Publication
+@using BookFaceApp.Infrastructure.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
