--- a/BookFaceApp/Views/Profile/MyProfile.cshtml
+++ b/BookFaceApp/Views/Profile/MyProfile.cshtml
@@ -12,10 +12,9 @@
 	@foreach (var publication in Model)
 	{
 		<div class="card col-4" style="width: 375px; margin: 5px;">
-			@*<a asp-controller="Profile" asp-action="Index" asp-route-id="@publication.UserId">
-		<h5 class="card-title mt-1">@publication.UserName</h5>
-		</a>*@
-			<h5 class="card-title mt-1">@publication.UserName</h5>
+			<a asp-controller="Profile" asp-action="UserProfile" asp-route-username="@publication.UserName">
+				<h5 class="card-title mt-1">@publication.UserName</h5>
+			</a>
 			<img class="card-img-top" style="width: 350px; height: 250px;"
 			 src="@publication.ImageUrl" alt="Publication Image">
 			<div class="card-body">
