--- a/BookFaceApp/Views/Home/Index.cshtml
+++ b/BookFaceApp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 	@foreach (var publication in Model)
 	{
 		<div class="card col-4" style="width: 375px; margin: 5px;">
-			<a asp-controller="Profile" asp-action="UserProfile" asp-route-username="@publication.UserName">
+			<a asp-controller="Profile" asp-action="User" asp-route-id="@publication.UserName">
 				<h5 class="card-title mt-1">@publication.UserName</h5>
 			</a>
 			<img class="card-img-top" style="width: 350px; height: 250px;"
