--- a/BookFaceApp/Views/User/Register.cshtml
+++ b/BookFaceApp/Views/User/Register.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="@Model.UserName" class="text-danger"></span>
             </div>
             <div class="text-center mb-3">
+                <label asp-for="@Model.FirstName">First Name</label>
+                <input class="form-control " autocomplete="username" aria-required="true" asp-for="@Model.FirstName" />
+                <span asp-validation-for="@Model.FirstName" class="text-danger"></span>
+            </div>
+            <div class="text-center mb-3">
+                <label asp-for="@Model.LastName">Last Name</label>
+                <input class="form-control " autocomplete="username" aria-required="true" asp-for="@Model.LastName" />
+                <span asp-validation-for="@Model.LastName" class="text-danger"></span>
+            </div>
+            <div class="text-center mb-3">
                 <label asp-for="@Model.Email">Email</label>
                 <input class="form-control " autocomplete="username" aria-required="true" asp-for="@Model.Email" />
                 <span asp-validation-for="@Model.Email" class="text-danger"></span>
