--- a/BookFaceApp/Views/User/Login.cshtml
+++ b/BookFaceApp/Views/User/Login.cshtml
@@ -30,7 +30,7 @@
 	</div>
 </div>
 
-<div class="col-md-6 col-md-offset-2">
+@*<div class="col-md-6 col-md-offset-2">
 	<section>
 		<h3>Use another service to log in.</h3>
 		<hr />
@@ -61,4 +61,4 @@
 			}
 		}
 	</section>
-</div>
+</div>*@
