Added view and add group functionality

--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using BookFaceApp.Core.Services
 @using BookFaceApp.Core.Models
 @using BookFaceApp.Core.Models.User
+@using BookFaceApp.Core.Models.Group
 @using BookFaceApp.Core.Models.Profile
 @using BookFaceApp.Core.Models.Comment
 @using BookFaceApp.Core.Models.Publication
