--- a/BookFaceApp/Views/Shared/_Layout.cshtml
+++ b/BookFaceApp/Views/Shared/_Layout.cshtml
@@ -39,6 +39,12 @@
 								<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="All">All Users</a>
 							</li>
 							<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Group" asp-action="All">All Groups</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Group" asp-action="Add">Add Group</a>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Test">Template</a>
 							</li>
 						}
