--- a/BookFaceApp/Views/Publication/Add.cshtml
+++ b/BookFaceApp/Views/Publication/Add.cshtml
@@ -11,6 +11,7 @@
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-action="Add" method="post">
+			@Html.HiddenFor(m => m.GroupId)
             <div class="mb-3">
                 <label asp-for="@Model.Title" class="form-label">Title</label>
                 <input asp-for="@Model.Title" class="form-control" aria-required="true" />
