Added sorting and search functionality

--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using BookFaceApp
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
+@using BookFaceApp.Models
 @using BookFaceApp.Core.Constants
 @using BookFaceApp.Core.Services
 @using BookFaceApp.Core.Models
