--- a/BookFaceApp/Views/Publication/All.cshtml
+++ b/BookFaceApp/Views/Publication/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PublicationViewModel>
+﻿@model AllPublicationsQueryModel
 
 @{
 	ViewBag.Title = "All Publications";
@@ -8,48 +8,93 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div id="main-card" class="text-center row main-card">
-	@foreach (var publication in Model)
-	{
-		<div class="card col-4" style="width: 375px; margin: 5px;">
-			<a asp-controller="Profile" asp-action="User" asp-route-id="@publication.UserName">
-				<h5 class="card-title mt-1">@publication.UserName</h5>
-			</a>
-			<img class="card-img-top" style="width: 350px; height: 250px;"
-			 src="@publication.ImageUrl" alt="Publication Image">
-			<div class="card-body">
-				<h5 class="card-title mt-1">@publication.Title</h5>
-				<h5 class="card-title mt-1">Category: @publication.Category</h5>
-				<h5 class="card-title mt-1">@publication.UsersPublications.Count likes</h5>
-				<h5 class="card-title mt-1">@publication.PublicationsComments.Count comments</h5>
-			</div>
-
-			<div>
-				<div id="pub-like-btn">
-					@if (publication.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
+<form method="get">
+	<div class="row">
+		<div class="form-group col-md-3 d-flex justify-content-between">
+			<div class="form-group">
+				<label asp-for="Category"></label>
+				<select asp-for="Category" class="form-control">
+					<option value="">All</option>
+					@foreach (var category in Model.Categories)
 					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-light">
-								<img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
+						<option value="@category">@category</option>
 					}
-					else
-					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-outline-light">
-								<img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
-					}
-				</div>
-
-				<div id="pub-det-btn">
-					<a class="btn btn-light" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">
-						<img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
-					</a>
-				</div>
+				</select>
 			</div>
 		</div>
+
+		<div class="form-group col-md-3">
+			<label asp-for="SearchTerm">Search Term</label>
+			<input asp-for="SearchTerm" class="form-control" placeholder="">
+		</div>
+
+		<div class="form-group col-md-3">
+			<div class="form-group">
+				<label asp-for="Sorting"></label>
+				<select asp-for="Sorting" class="form-control">
+					<option value="0">Newest</option>
+					<option value="1">Most liked first</option>
+					<option value="2">Most commented first</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="col-md-3">
+			<div class="form-group mt-4 p-2">
+				<input type="submit" value="Search" class="btn btn-primary" />
+			</div>
+		</div>
+	</div>
+</form>
+
+
+@{
+	var previousPage = Model.CurrentPage - 1;
+	if (previousPage < 1)
+	{
+		previousPage = 1;
+	}
+
+	var maxPage = Math.Ceiling((double)Model.TotalPublicationsCount /
+		AllPublicationsQueryModel.PublicationsPerPage);
+}
+
+<div class="row mb-5">
+	<div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
+		<a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+		   asp-controller="Publication"
+		   asp-action="All"
+		   asp-route-currentPage="@previousPage"
+		   asp-route-category="@Model.Category"
+		   asp-route-searchTerm="@Model.SearchTerm"
+		   asp-route-sorting="@((int)Model.Sorting)"><<</a>
+	</div>
+
+	@{
+		var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+		!Model.Publications.Any();
+	}
+
+	<div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
+		<a class="btn btn-primary
+           @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
+		   asp-controller="Publication"
+		   asp-action="All"
+		   asp-route-currentPage="@(Model.CurrentPage + 1)"
+		   asp-route-category="@Model.Category"
+		   asp-route-searchTerm="@Model.SearchTerm"
+		   asp-route-sorting="@((int)Model.Sorting)">>></a>
+	</div>
+</div>
+
+@if (!Model.Publications.Any())
+{
+	<h2 class="text-center">No publications found by the given criteria!</h2>
+}
+
+<div class="row">
+	@foreach (var publication in Model.Publications)
+	{
+		<partial name="_PublicationPartial" model="@publication" />
 	}
 </div>
