--- a/BookFaceApp/Views/Group/All.cshtml
+++ b/BookFaceApp/Views/Group/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GroupViewModel>
+﻿@model AllGroupsQueryModel
 
 @{
 	ViewBag.Title = "All Groups";
@@ -8,28 +8,93 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div id="main-card" class="text-center row main-card">
-	@foreach (var group in Model)
-	{
-		<div class="card col-4" style="width: 375px; margin: 5px;">
-			<div class="card-body">
-				@if (group.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
+<form method="get">
+	<div class="row">
+		<div class="form-group col-md-3 d-flex justify-content-between">
+			<div class="form-group">
+				<label asp-for="Category"></label>
+				<select asp-for="Category" class="form-control">
+					<option value="">All</option>
+					@foreach (var category in Model.Categories)
 					{
-						<a class="btn btn-outline-info" asp-area="" asp-controller="Group" asp-action="Edit" asp-route-id="@group.Id">
-							<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
-						</a>
-						<a class="btn btn-outline-danger" asp-area="" asp-controller="Group" asp-action="Delete" asp-route-id="@group.Id" onclick="return confirm('Are you sure you want to delete this comment?')">
-							<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
-						</a>
+						<option value="@category">@category</option>
 					}
-				<a asp-controller="Group" asp-action="Details" asp-route-id="@group.Id">
-					<h5 class="card-title mt-1">@group.Name</h5>
-				</a>
-				<h5 class="card-title mt-1">Category: @group.Category</h5>
-				<h5 class="card-title mt-1">Owner: @group.Owner.FirstName @group.Owner.LastName</h5>
-				<h5 class="card-title mt-1">@group.UsersGroups.Count members</h5>
-				<h5 class="card-title mt-1">@group.Publications.Count publications</h5>
+				</select>
 			</div>
 		</div>
+
+		<div class="form-group col-md-3">
+			<label asp-for="SearchTerm">Search Term</label>
+			<input asp-for="SearchTerm" class="form-control" placeholder="">
+		</div>
+
+		<div class="form-group col-md-3">
+			<div class="form-group">
+				<label asp-for="Sorting"></label>
+				<select asp-for="Sorting" class="form-control">
+					<option value="0">Newest</option>
+					<option value="1">Most users first</option>
+					<option value="2">Most publications first</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="col-md-3">
+			<div class="form-group mt-4 p-2">
+				<input type="submit" value="Search" class="btn btn-primary" />
+			</div>
+		</div>
+	</div>
+</form>
+
+
+@{
+	var previousPage = Model.CurrentPage - 1;
+	if (previousPage < 1)
+	{
+		previousPage = 1;
+	}
+
+	var maxPage = Math.Ceiling((double)Model.TotalGroupsCount /
+		AllGroupsQueryModel.GroupsPerPage);
+}
+
+<div class="row mb-5">
+	<div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
+		<a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+		   asp-controller="Group"
+		   asp-action="All"
+		   asp-route-currentPage="@previousPage"
+		   asp-route-category="@Model.Category"
+		   asp-route-searchTerm="@Model.SearchTerm"
+		   asp-route-sorting="@((int)Model.Sorting)"><<</a>
+	</div>
+
+	@{
+		var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+		!Model.Groups.Any();
+	}
+
+	<div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
+		<a class="btn btn-primary
+           @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
+		   asp-controller="Group"
+		   asp-action="All"
+		   asp-route-currentPage="@(Model.CurrentPage + 1)"
+		   asp-route-category="@Model.Category"
+		   asp-route-searchTerm="@Model.SearchTerm"
+		   asp-route-sorting="@((int)Model.Sorting)">>></a>
+	</div>
+</div>
+
+@if (!Model.Groups.Any())
+{
+	<h2 class="text-center">No groups found by the given criteria!</h2>
+}
+
+<div class="row">
+	@foreach (var group in Model.Groups)
+	{
+		<partial name="_GroupPartial" model="@group" />
 	}
 </div>
