Added update only likes count ( not refresh the whole page ) on like ( does not work )

--- a/BookFaceApp/Views/Publication/All.cshtml
+++ b/BookFaceApp/Views/Publication/All.cshtml
@@ -95,6 +95,17 @@
 <div class="row">
 	@foreach (var publication in Model.Publications)
 	{
+		@Html.HiddenFor(p => publication.Id)
 		<partial name="_PublicationPartial" model="@publication" />
 	}
 </div>
+
+@*@section Scripts {
+	<script>
+		$('#likeButton').on('click', e => {
+			$.get('/api/statistics', (data) => {
+				$('#totalLikes').text(data.totalLikes + " likes")
+			});
+		});
+	</script>
+}*@
