--- a/BookFaceApp/Views/Publication/Edit.cshtml
+++ b/BookFaceApp/Views/Publication/Edit.cshtml
@@ -11,7 +11,8 @@
 <div class="row">
 	<div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
 		<form asp-action="Edit" method="post">
-			@Html.HiddenFor(m => m.Id)
+			@Html.HiddenFor(p => p.Id)
+			@Html.HiddenFor(p => p.GroupId)
 			<div class="mb-3">
 				<label asp-for="@Model.Title" class="form-label">Title</label>
 				<input asp-for="@Model.Title" class="form-control" aria-required="true" />
