--- a/BookFaceApp/Views/Shared/_PublicationPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_PublicationPartial.cshtml
@@ -1,27 +1,28 @@
 ﻿@model PublicationViewModel
 
 
-
-<div class="card col-4" style="width: 375px; margin: 5px;">
+<div class="card" style="width: 26rem; height: 32rem; margin: 5px;">
     @Html.HiddenFor(p => p.Id)
     <a asp-controller="Profile" asp-action="User" asp-route-id="@Model.UserName">
-        <h5 class="card-title mt-1">@Model.UserName</h5>
+        <h5 class="card-title mt-1" style="padding: 5px;">@Model.FirstName @Model.LastName</h5>
     </a>
-    <img class="card-img-top" style="width: 350px; height: 250px;"
-         src="@Model.ImageUrl" alt="Publication Image">
-    <div class="card-body">
-        <h5 class="card-title mt-1">@Model.Title</h5>
-        <h5 class="card-title mt-1">Category: @Model.Category</h5>
-        <h5 class="card-title mt-1" id="totalLikes">@Model.UsersPublications.Count likes</h5>
-        <h5 class="card-title mt-1">@Model.PublicationsComments.Count comments</h5>
-    </div>
+    <img src="@Model.ImageUrl" class="card-img-top" alt="..." style="height: 240px; width: 390px;">
 
-    <div>
+    <div class="card-body">
+        <h4 class="card-title text-center">@Model.Title</h4>
+        <hr />
+        <h6 class="card-text" style="padding-bottom: 5px;">Category: @Model.Category</h6>
+        <div>
+            <p class="card-text">@Model.UsersPublications.Count likes</p>
+        </div>
+        <div>
+            <p class="card-text">@Model.PublicationsComments.Count comments</p>
+        </div>
         <div id="pub-like-btn">
             @if (Model.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
             {
                 <form class="input-group-sm" id="likeButton" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@Model.Id">
-                    <button type="submit" id="likeButton" class="btn btn-light">
+                    <button type="submit" id="likeButton" class="btn btn-primary">
                         <img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
                     </button>
                 </form>
@@ -29,30 +30,27 @@
             else
             {
                 <form class="input-group-sm" id="likeButton" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@Model.Id">
-                    <button type="submit" id="likeButton" class="btn btn-outline-light">
+                    <button type="submit" id="likeButton" class="btn btn-primary">
                         <img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
                     </button>
                 </form>
             }
         </div>
-
         <div id="pub-det-btn">
-            <a class="btn btn-light" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@Model.Id">
-                <img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
-            </a>
+            <form class="input-group-sm" asp-controller="Publication" asp-action="Details" asp-route-id="@Model.Id" method="get">
+                <button type="submit" class="btn btn-primary">
+                    <img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
+                </button>
+            </form>
         </div>
 
         @*<div class="row">
-            <div class="col-12 text-center">
-                <button class="btn btn-primary" id="likeButton">Test button</button>
-            </div>
-        </div>
-
-        <div class="mt-4 p-5 bg-light d-none" id="statistics">
-            <div class="row">
-                <h2 class="col-md-6 text-center" id="totaLikes"></h2>
-            </div>
+            @foreach (var comment in Model.PublicationsComments)
+            {
+                <partial name="_CommentPartial" model="@comment.Comment" />
+            }
         </div>*@
+
     </div>
 </div>
 
