Views bugs and fixes

--- a/BookFaceApp/Views/Comment/Add.cshtml
+++ b/BookFaceApp/Views/Comment/Add.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <form class="input-group-sm" asp-controller="Comment" asp-action="Add" asp-route-id="@Model.PublicationId">
-                <input type="submit" value="Post Comment" class="fs-6 btn btn-success mb-3 p-2" />
+                <input type="submit" value="Post Comment" class="fs-6 btn btn-primary mb-3 p-2" />
             </form>
         </form>
     </div>
