--- a/BookFaceApp/Views/Profile/MyProfile.cshtml
+++ b/BookFaceApp/Views/Profile/MyProfile.cshtml
@@ -8,48 +8,9 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div id="main-card" class="text-center row main-card">
+<div class="row">
 	@foreach (var publication in Model)
 	{
-		<div class="card col-4" style="width: 375px; margin: 5px;">
-			<a asp-controller="Profile" asp-action="UserProfile" asp-route-username="@publication.UserName">
-				<h5 class="card-title mt-1">@publication.UserName</h5>
-			</a>
-			<img class="card-img-top" style="width: 350px; height: 250px;"
-			 src="@publication.ImageUrl" alt="Publication Image">
-			<div class="card-body">
-				<h5 class="card-title mt-1">@publication.Title</h5>
-				<h5 class="card-title mt-1">Category: @publication.Category</h5>
-				<h5 class="card-title mt-1">@publication.UsersPublications.Count likes</h5>
-				<h5 class="card-title mt-1">@publication.PublicationsComments.Count comments</h5>
-			</div>
-
-			<div>
-				<div id="pub-like-btn">
-					@if (publication.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
-					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-light">
-								<img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
-					}
-					else
-					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-outline-light">
-								<img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
-					}
-				</div>
-
-				<div id="pub-det-btn">
-					<a class="btn btn-light" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">
-						<img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
-					</a>
-				</div>
-			</div>
-		</div>
+		<partial name="_PublicationPartial" model="@publication" />
 	}
 </div>
