--- a/BookFaceApp/Views/Group/Details.cshtml
+++ b/BookFaceApp/Views/Group/Details.cshtml
@@ -65,7 +65,7 @@
     }
 
 
-    <a class="btn btn-success" asp-area="" asp-controller="Publication" asp-action="Add" asp-route-id="@Model.Id">Add new publication</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Publication" asp-action="Add" asp-route-id="@Model.Id">Add new publication</a>
 </div>
 
 <script src="/js/bootstrap.min.js"></script>
