--- a/BookFaceApp/Views/Shared/_GroupPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_GroupPartial.cshtml
@@ -4,10 +4,10 @@
 			<div class="card-body">
 				@if (Model.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
 					{
-						<a class="btn btn-outline-info" asp-area="" asp-controller="Group" asp-action="Edit" asp-route-id="@Model.Id">
+			<a class="btn btn-primary" asp-area="" asp-controller="Group" asp-action="Edit" asp-route-id="@Model.Id">
 							<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
 						</a>
-						<a class="btn btn-outline-danger" asp-area="" asp-controller="Group" asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this comment?')">
+			<a class="btn btn-primary" asp-area="" asp-controller="Group" asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this comment?')">
 							<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
 						</a>
 					}
