Added URL protection

--- a/BookFaceApp/Views/Group/Details.cshtml
+++ b/BookFaceApp/Views/Group/Details.cshtml
@@ -49,7 +49,7 @@
                         }
                     </div>
                     <div id="pub-det-btn">
-                        <form class="input-group-sm" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id" method="get">
+                        <form class="input-group-sm" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id" asp-route-information="" method="get">
                             <button type="submit" class="btn btn-primary">
                                 <img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
                             </button>
