--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -2,8 +2,9 @@
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using BookFaceApp.Models
-@using BookFaceApp.Core.Constants
 @using BookFaceApp.Core.Services
+@using BookFaceApp.Core.Constants
+@using BookFaceApp.Core.Extensions
 @using BookFaceApp.Core.Models
 @using BookFaceApp.Core.Models.User
 @using BookFaceApp.Core.Models.Group
