--- a/BookFaceApp/Views/Home/Index.cshtml
+++ b/BookFaceApp/Views/Home/Index.cshtml
@@ -11,45 +11,57 @@
 <div id="main-card" class="text-center row main-card">
 	@foreach (var publication in Model)
 	{
-		<div class="card col-4" style="width: 375px; margin: 5px;">
-			<a asp-controller="Profile" asp-action="User" asp-route-id="@publication.UserName">
-				<h5 class="card-title mt-1">@publication.UserName</h5>
-			</a>
-			<img class="card-img-top" style="width: 350px; height: 250px;"
-			 src="@publication.ImageUrl" alt="Publication Image">
-			<div class="card-body">
-				<h5 class="card-title mt-1">@publication.Title</h5>
-				<h5 class="card-title mt-1">Category: @publication.Category</h5>
-				<h5 class="card-title mt-1">@publication.UsersPublications.Count likes</h5>
-				<h5 class="card-title mt-1">@publication.PublicationsComments.Count comments</h5>
-			</div>
+        <div class="card" style="width: 26rem; height: 32rem; margin: 5px;">
+            @Html.HiddenFor(p => publication.Id)
+            <a asp-controller="Profile" asp-action="User" asp-route-id="@publication.UserName">
+                <h5 class="card-title mt-1" style="padding: 5px;">@publication.FirstName @publication.LastName</h5>
+            </a>
+            <img src="@publication.ImageUrl" class="card-img-top" alt="..." style="height: 240px; width: 390px;">
 
-			<div>
-				<div id="pub-like-btn">
-					@if (publication.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
-					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-light">
-								<img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
-					}
-					else
-					{
-						<form class="input-group-sm" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
-							<button type="submit" class="btn btn-outline-light">
-								<img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
-							</button>
-						</form>
-					}
-				</div>
+            <div class="card-body">
+                <h4 class="card-title text-center">@publication.Title</h4>
+                <hr />
+                <h6 class="card-text" style="padding-bottom: 5px;">Category: @publication.Category</h6>
+                <div>
+                    <p class="card-text">@publication.UsersPublications.Count likes</p>
+                </div>
+                <div>
+                    <p class="card-text">@publication.PublicationsComments.Count comments</p>
+                </div>
+                <div id="pub-like-btn">
+                    @if (publication.UsersPublications.Any(up => up.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value))
+                    {
+                        <form class="input-group-sm" id="likeButton" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
+                            <button type="submit" id="likeButton" class="btn btn-primary">
+                                <img src="/lib/bootstrap-icons/heart-fill.svg" alt="Bootstrap" width="35" height="35">
+                            </button>
+                        </form>
+                    }
+                    else
+                    {
+                        <form class="input-group-sm" id="likeButton" asp-controller="Publication" asp-action="LikePublication" asp-route-id="@publication.Id">
+                            <button type="submit" id="likeButton" class="btn btn-primary">
+                                <img src="/lib/bootstrap-icons/heart.svg" alt="Bootstrap" width="35" height="35">
+                            </button>
+                        </form>
+                    }
+                </div>
+                <div id="pub-det-btn">
+                    <form class="input-group-sm" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id" method="get">
+                        <button type="submit" class="btn btn-primary">
+                            <img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
+                        </button>
+                    </form>
+                </div>
 
-				<div id="pub-det-btn">
-					<a class="btn btn-light" asp-area="" asp-controller="Publication" asp-action="Details" asp-route-id="@publication.Id">
-						<img src="/lib/bootstrap-icons/chat-dots.svg" alt="Bootstrap" width="35" height="35">
-					</a>
-				</div>
-			</div>
-		</div>
+                @*<div class="row">
+            @foreach (var comment in Model.PublicationsComments)
+            {
+            <partial name="_CommentPartial" model="@comment.Comment" />
+            }
+            </div>*@
+
+            </div>
+        </div>
 	}
 </div>
