Changed home page to show three random publications

--- a/BookFaceApp/Views/Home/Index.cshtml
+++ b/BookFaceApp/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PublicationViewModel>
 
 @{
-	ViewBag.Title = "Top Publications";
+	ViewBag.Title = "Random Publications";
 }
 
 
