Fixed edit group now shows categories

--- a/BookFaceApp/Views/Group/Details.cshtml
+++ b/BookFaceApp/Views/Group/Details.cshtml
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h4 class="card-title text-center">@publication.Title</h4>
                     <hr />
-                    <h6 class="card-text" style="padding-bottom: 5px;">Category: @Model.Category</h6>
+                    <h6 class="card-text" style="padding-bottom: 5px;">Category: @publication.Category.Name</h6>
                     <div>
                         <p class="card-text">@publication.UsersPublications.Count likes</p>
                     </div>
