Added admin permissions and publication/group owner permission to edit and delete publications/comments

--- a/BookFaceApp/Views/Shared/_GroupPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_GroupPartial.cshtml
@@ -1,7 +1,12 @@
 ﻿@model GroupViewModel
+@inject IGroupService grpService
 
 <div class="card col-4" style="width: 375px; margin: 5px;">
 			<div class="card-body">
+		@if (await grpService.IsOwnerAsync(Model.Id, User.Id()) || User.IsInRole("Administrator"))
+		{
+			
+		}
 				@if (Model.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
 					{
 			<a class="btn btn-primary" asp-area="" asp-controller="Group" asp-action="Edit" asp-route-id="@Model.Id">
