--- a/BookFaceApp/Views/Publication/Details.cshtml
+++ b/BookFaceApp/Views/Publication/Details.cshtml
@@ -1,4 +1,7 @@
 ﻿@model PublicationViewModel
+@inject IPublicationService pubService
+@inject ICommentService comService
+@inject IGroupService grpService
 
 @{
     ViewBag.Title = "Publication details";
@@ -14,7 +17,9 @@
         <a asp-controller="Profile" asp-action="User" asp-route-id="@Model.UserName">
             <h4 class="card-title mt-1" style="padding-bottom: 20px; padding-top: 5px; padding-left: 5px;">@Model.FirstName @Model.LastName</h4>
         </a>
-        @if (@Model.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
+        @if (await pubService.IsOwnerAsync(Model.Id, User.Id())
+        || User.IsInRole("Administrator")
+        || ((await pubService.IsInGroupAsync(Model.Id)) && (await grpService.IsOwnerAsync((int)Model.GroupId!, User.Id()))))
         {
             <div style="position: absolute; top: 10px; right: 80px;">
                 <a class="btn btn-primary" asp-area="" asp-controller="Publication" asp-action="Edit" asp-route-id="@Model.Id">
@@ -39,24 +44,26 @@
                 @foreach (var comment in Model.PublicationsComments)
                 {
                     <div class="card-body">
-                        @if (@comment.Comment.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
+                        @if (await comService.IsOwnerAsync(comment.CommentId, User.Id())
+                       || await pubService.IsOwnerAsync(Model.Id, User.Id())
+                       || User.IsInRole("Administrator"))
                         {
                             <div style="float: right;">
                                 <a class="btn btn-primary" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@comment.CommentId" onclick="return confirm('Are you sure you want to delete this comment?')">
-                                <img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
-                            </a>
+                                    <img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
+                                </a>
                             </div>
                             <div style="float: right; margin-right: 10px;">
-                            <a class="btn btn-primary" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@comment.CommentId">
-                                <img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
-                            </a>
-                            </div>                            
+                                <a class="btn btn-primary" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@comment.CommentId">
+                                    <img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
+                                </a>
+                            </div>
                         }
                         <a asp-controller="Profile" asp-action="User" asp-route-id="@comment.Comment.User.UserName">
                             <h5 class="card-title mt-1">@comment.Comment.User.FirstName @comment.Comment.User.LastName</h5>
                         </a>
                         <h5 class="card-title mt-1">@comment.Comment.Text</h5>
-                        
+
                         <hr />
                     </div>
                 }
