--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using BookFaceApp.Models
+@using BookFaceApp.Extensions
+@using BookFaceApp.Core.Contracts
 @using BookFaceApp.Core.Services
 @using BookFaceApp.Core.Constants
 @using BookFaceApp.Core.Extensions
