Moved roles management to admin area

--- a/BookFaceApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_LoginPartial.cshtml
@@ -2,33 +2,33 @@
 @inject UserManager<User> UserManager
 
 <ul class="navbar-nav">
-	@if (SignInManager.IsSignedIn(User))
-	{
-		@if (User.IsInRole("Administrator"))
-		{
-			<li class="nav-item">
-				<a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
-			</li>
-		}
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-area="" asp-controller="Request" asp-action="All">Requests</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">@User!.Identity!.Name</a>
-		</li>
-		<li class="nav-item">
-			<form class="form-inline" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
-				<button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-			</form>
-		</li>
-	}
-	else
-	{
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
-		</li>
-	}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        @if (User.IsInRole("Administrator"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="Roles">Roles</a>
+            </li>
+        }
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Request" asp-action="All">Requests</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="MyProfile">@User!.Identity!.Name</a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
+        </li>
+    }
 </ul>
