--- a/BookFaceApp/Areas/Admin/Views/Admin/Create.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/Admin/Create.cshtml
@@ -6,7 +6,7 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<a asp-action="Index" class="btn btn-primary">Back</a>
+<a asp-action="Roles" class="btn btn-primary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="Create" method="post">
