Fixed logout not working correctly because of area

--- a/BookFaceApp/Areas/Admin/Views/Admin/Add.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/Admin/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 @{
-    ViewBag.Title = "Create Role";
+    ViewBag.Title = "Add a Role";
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
