Added go back buttons when in publication/group/groupPubllication view

--- a/BookFaceApp/Views/Group/Details.cshtml
+++ b/BookFaceApp/Views/Group/Details.cshtml
@@ -8,6 +8,8 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
+<a asp-controller="Group" asp-action="All" class="btn btn-primary">Back</a>
+
 <div class="text-center row">
     @if (Model.Publications.Count > 0)
     {
