--- a/BookFaceApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Microsoft.AspNetCore.Identity
 @using BookFaceApp.Core.Models.Role
 @using BookFaceApp.Infrastructure.Data.Entities
+@using BookFaceApp.Infrastructure.Data.Entities.Relationships
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper BookFaceApp.Areas.Admin.CustomTagHelpers.*, BookFaceApp
